--- a/site.html
+++ b/site.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant Health Food</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="styles/bootstrap.min.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/all.min.css" />
   </head>
 
   <body>
@@ -48,7 +48,7 @@
           </p>
           <button class="btn">Order now</button>
         </div>
-        <img src="img/x02.png" alt="" />
+        <img src="images/x02.png" alt="" />
       </div>
       <br /><br />
       <div class="container-fluid">
@@ -59,7 +59,7 @@
             <div class="cards">
               <!-- <li class="circle1">a</li>
               <li class="circle2">b</li> -->
-              <img src="img/x03.png" alt="" />
+              <img src="images/x03.png" alt="" />
               <div class="desc">
                 <p>Tasty Food</p>
                 <div class="rate">
@@ -78,7 +78,7 @@
               </div>
             </div>
             <div class="cards">
-              <img src="img/x04.png" alt="" />
+              <img src="images/x04.png" alt="" />
               <div class="desc">
                 <p>Tasty Food</p>
                 <div class="rate">
@@ -97,7 +97,7 @@
               </div>
             </div>
             <div class="cards">
-              <img src="img/x05.png" alt="" />
+              <img src="images/x05.png" alt="" />
               <div class="desc">
                 <p>Tasty Food</p>
                 <div class="rate">
@@ -116,7 +116,7 @@
               </div>
             </div>
             <div class="cards">
-              <img src="img/x06.png" alt="" />
+              <img src="images/x06.png" alt="" />
               <div class="desc">
                 <p>Tasty Food</p>
                 <div class="rate">
@@ -135,7 +135,7 @@
               </div>
             </div>
             <div class="cards">
-              <img src="img/x07.png" alt="" />
+              <img src="images/x07.png" alt="" />
               <div class="desc">
                 <p>Tasty Food</p>
                 <div class="rate">
@@ -162,7 +162,7 @@
           <p class="title" style="color: black">WHY CHOOSE US?</p>
           <div class="about">
             <div class="ab-img">
-              <img src="img/x08.png" alt="" />
+              <img src="images/x08.png" alt="" />
             </div>
             <div class="ab-details">
               <p class="ab-head">Best Food In The Country</p>
@@ -217,7 +217,7 @@
               <li class="circle3">
                 <i class="fas fa-heart"></i>
               </li>
-              <img class="mimg" src="img/x09.jpg" alt="" />
+              <img class="mimg" src="images/x09.jpg" alt="" />
               <div class="mdesc">
                 <div class="rate">
                   <div class="ratings-wrapper">
@@ -245,36 +245,7 @@
               <li class="circle3">
                 <i class="fas fa-heart"></i>
               </li>
-              <img class="mimg" src="img/x10.jpg" alt="" />
-              <div class="mdesc">
-                <div class="rate">
-                  <div class="ratings-wrapper">
-                    <div data-productid="#" class="mratings">
-                      <span data-ratings="5">&#9733;</span>
-                      <span data-ratings="4">&#9733;</span>
-                      <span data-ratings="3">&#9733;</span>
-                      <span data-ratings="2">&#9733;</span>
-                      <span data-ratings="1">&#9733;</span>
-                    </div>
-                  </div>
-                </div>
-                <p>Tasty Food</p>
-                <p class="mdetails">
-                  Lorem Ipsum Dolor Sit, Amet Consectetur Adipisicing
-                  Elit.Excepturi, Accusantium.
-                </p>
-                <div>
-                  <button class="add">Add to cart</button>
-                  <p class="price">$10.00</p>
-                </div>
-              </div>
-            </div>
-            <div class="mcards">
-              <li class="circle3">
-                <i class="fas fa-heart"></i>
-              </li>
-
-              <img class="mimg" src="img/x11.jpg" alt="" />
+              <img class="mimg" src="images/x10.jpg" alt="" />
               <div class="mdesc">
                 <div class="rate">
                   <div class="ratings-wrapper">
@@ -303,7 +274,7 @@
                 <i class="fas fa-heart"></i>
               </li>
 
-              <img class="mimg" src="img/x12.jpg" alt="" />
+              <img class="mimg" src="images/x11.jpg" alt="" />
               <div class="mdesc">
                 <div class="rate">
                   <div class="ratings-wrapper">
@@ -332,7 +303,7 @@
                 <i class="fas fa-heart"></i>
               </li>
 
-              <img class="mimg" src="img/x13.jpg" alt="" />
+              <img class="mimg" src="images/x12.jpg" alt="" />
               <div class="mdesc">
                 <div class="rate">
                   <div class="ratings-wrapper">
@@ -361,7 +332,7 @@
                 <i class="fas fa-heart"></i>
               </li>
 
-              <img class="mimg" src="img/x14.jpg" alt="" />
+              <img class="mimg" src="images/x13.jpg" alt="" />
               <div class="mdesc">
                 <div class="rate">
                   <div class="ratings-wrapper">
@@ -390,7 +361,36 @@
                 <i class="fas fa-heart"></i>
               </li>
 
-              <img class="mimg" src="img/x15.jpg" alt="" />
+              <img class="mimg" src="images/x14.jpg" alt="" />
+              <div class="mdesc">
+                <div class="rate">
+                  <div class="ratings-wrapper">
+                    <div data-productid="#" class="mratings">
+                      <span data-ratings="5">&#9733;</span>
+                      <span data-ratings="4">&#9733;</span>
+                      <span data-ratings="3">&#9733;</span>
+                      <span data-ratings="2">&#9733;</span>
+                      <span data-ratings="1">&#9733;</span>
+                    </div>
+                  </div>
+                </div>
+                <p>Tasty Food</p>
+                <p class="mdetails">
+                  Lorem Ipsum Dolor Sit, Amet Consectetur Adipisicing
+                  Elit.Excepturi, Accusantium.
+                </p>
+                <div>
+                  <button class="add">Add to cart</button>
+                  <p class="price">$10.00</p>
+                </div>
+              </div>
+            </div>
+            <div class="mcards">
+              <li class="circle3">
+                <i class="fas fa-heart"></i>
+              </li>
+
+              <img class="mimg" src="images/x15.jpg" alt="" />
               <div class="mdesc">
                 <div class="rate">
                   <div class="ratings-wrapper">
